sync-app (0.6.1) unstable; urgency=low

  * Fixes: NB#252051 - Importing contacts from RM-696 results in empty group
    card

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Mon, 16 May 2011 15:05:50 +0530

sync-app (0.6.0) unstable; urgency=low

  * Fixes: NB#246555 - contacts sync never ends from swtich/sync application.
  * Fixes: NB#245983 - Sync is using an API which can fail (Calendar events
    are not synchronized to device).
  * Fixes: NB#237707 - Recurring events spanning across DST is not
    synchronized with correct time.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Wed, 13 Apr 2011 15:57:00 +0530

sync-app (0.5.15) unstable; urgency=low

  * Fixes: NB#245983 - Sync is using an API which can fail (Calendar events
    are not synchronized to device).
  * Fixes: NB#237707 - Recurring events spanning across DST is not
    synchronized with correct time.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Tue, 12 Apr 2011 16:20:00 +0530

sync-app (0.5.14) unstable; urgency=low

  * Fixes: NB#233334 - Notes having spaces at the beginning in N900 is
    truncated in dali after synchronization.
  * Fixes - Making online dummy profiles has hideen

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Tue, 08 Mar 2011 18:25:19 +0530

sync-app (0.5.13) unstable; urgency=low

  * Fixes: NB#233134 - Notes are synced to default personal calendar instead
    of new calendar

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Fri, 04 Mar 2011 11:47:00 +0530

sync-app (0.5.12) unstable; urgency=low

  * Fixes: NB#230558 - Calendar sync fails with NOS via USB

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Wed, 02 Mar 2011 09:48:09 +0530

sync-app (0.5.11) unstable; urgency=low

  * Fixes: NB#178342 - New calendar is not created in device after
    synchronizing calendar events from N95 to device.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Wed, 23 Feb 2011 18:45:00 +0530

sync-app (0.5.10) unstable; urgency=low
