@@ -48,20 +48,10 @@ NotesBackend::~NotesBackend()
     FUNCTION_CALL_TRACE;
 }
 
-bool NotesBackend::init( const QString& aNotebookName, const QString& aUid,
-                         const QString &aMimeType )
+bool NotesBackend::init(const QString &aMimeType)
 {
     FUNCTION_CALL_TRACE;
 
-    LOG_DEBUG( "Notes backend using notebook" << aNotebookName );
-
-    if( aNotebookName.isEmpty() )
-    {
-        LOG_DEBUG("NoteBook Name to Sync is expected. It Cannot be Empty");
-        return false;
-    }
-
-    iNotebookName = aNotebookName;
     iMimeType = aMimeType;
 
     iCalendar = mKCal::ExtendedCalendar::Ptr( new mKCal::ExtendedCalendar( KDateTime::Spec::LocalZone( ) ));
@@ -86,32 +76,13 @@ bool NotesBackend::init( const QString& aNotebookName, const QString& aUid,
     
     mKCal::Notebook::Ptr openedNb;
 
-    // If we have an Uid, we try to get the corresponding Notebook
-    if (!aUid.isEmpty()) {
-        openedNb = iStorage->notebook(aUid);
-
-        // If we didn't get one, we create one and set its Uid
-        if (!openedNb) {
-            openedNb = mKCal::Notebook::Ptr(new mKCal::Notebook(aNotebookName,
-                                                                "Synchronization Created Notebook for " + aNotebookName));
-            if (!openedNb.isNull()) {
-                openedNb->setUid(aUid);
-                if (!iStorage->addNotebook(openedNb)) {
-                    LOG_WARNING("Failed to add notebook to storage");
-                }
-            }
-        }
-    }
-    // If we didn't have an Uid or the creation above failed,
     // we use the default notebook
-    if (openedNb.isNull()) {
-        LOG_DEBUG("Using default notebook");
-        openedNb = iStorage->defaultNotebook();
-        if(openedNb.isNull())
-        {
-            LOG_DEBUG("No default notebook exists, creating one");
-            openedNb = iStorage->createDefaultNotebook();
-        }
+    LOG_DEBUG("Using default notebook");
+    openedNb = iStorage->defaultNotebook();
+    if(openedNb.isNull())
+    {
+        LOG_DEBUG("No default notebook exists, creating one");
+        openedNb = iStorage->createDefaultNotebook();
     }
     if (opened && loaded && !openedNb.isNull())
     {
