@@ -77,19 +77,7 @@ bool NotesStorage::init( const QMap<QString, QString>& aProperties )
     iProperties[STORAGE_SYNCML_CTCAPS_PROP_11] = getCTCaps( CTCAPSFILENAME11 );
     iProperties[STORAGE_SYNCML_CTCAPS_PROP_12] = getCTCaps( CTCAPSFILENAME12 );
 
-    // Use remote name (e.g. bt name) as notebook name.
-    if(iProperties.contains(Buteo::KEY_REMOTE_NAME)) {
-        LOG_DEBUG("Using remote name as notebook name");
-        iProperties[STORAGE_NOTEBOOK_PROP] = iProperties.value(Buteo::KEY_REMOTE_NAME);
-    }
-    else if( iProperties.value( STORAGE_NOTEBOOK_PROP ).isEmpty() ) {
-        LOG_WARNING( STORAGE_NOTEBOOK_PROP << " property not found" <<
-                     "for notes storage, using default of" <<
-                     DEFAULT_NOTEBOOK_NAME );
-        iProperties[STORAGE_NOTEBOOK_PROP] = DEFAULT_NOTEBOOK_NAME;
-    }
-    LOG_DEBUG("Initializing notes, notebook name:" <<  iProperties[STORAGE_NOTEBOOK_PROP]); 
-
+    LOG_DEBUG("Initializing notes");
 
     if( iProperties.value( STORAGE_DEFAULT_MIME_PROP ).isEmpty() ) {
         LOG_WARNING( STORAGE_DEFAULT_MIME_PROP << "property not found"
@@ -97,20 +85,7 @@ bool NotesStorage::init( const QMap<QString, QString>& aProperties )
         iProperties[STORAGE_DEFAULT_MIME_PROP] = DEFAULT_TYPE;
     }
 
-    if( iProperties.value( STORAGE_DEFAULT_MIME_VERSION_PROP ).isEmpty() ) {
-        LOG_WARNING( STORAGE_DEFAULT_MIME_VERSION_PROP << " property not found"
-                     <<"for notes storage, using default of" << DEFAULT_TYPE_VERSION );
-        iProperties[STORAGE_DEFAULT_MIME_VERSION_PROP] = DEFAULT_TYPE_VERSION;
-    }
-
-    if( iProperties.value( STORAGE_NOTEBOOK_PROP ).isEmpty() ) {
-        LOG_WARNING( STORAGE_NOTEBOOK_PROP << " property not found"
-                     << "for notes storage, using default of" << DEFAULT_NOTEBOOK );
-        iProperties[STORAGE_NOTEBOOK_PROP] = DEFAULT_NOTEBOOK;
-    }
-
-    return iBackend.init( iProperties[STORAGE_NOTEBOOK_PROP], iProperties[Buteo::KEY_UUID],
-        iProperties[STORAGE_DEFAULT_MIME_PROP] );
+    return iBackend.init(iProperties[STORAGE_DEFAULT_MIME_PROP]);
 }
 
 bool NotesStorage::uninit()
